change the link to go to the main page

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <header>
         <img src="" alt="">
         <p>ToDo</p>
-        <a href="./about.html">about Page</a>
+        <a href="./index.html">Home Page</a>
             </header>
             <main>
                 <section>
