change the css page

--- a/html/about.html
+++ b/html/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Page</title>
-    <link rel="stylesheet" href="styleAB.css".css">
+    <link rel="stylesheet" href="/style/styleAB.css">
 </head>
 <body>
     <header>
@@ -15,20 +15,20 @@
         
             </header>
             <main>
-                <section>
+                <section id="introdcuion">
                     <img src="https://cdn.pixabay.com/photo/2018/08/28/12/41/avatar-3637425_960_720.png" alt="img for person"class="img2">
-                    <p class="qwr">photo: dsadsd <br>
+                    <p>photo: dsadsd <br>
                          name:sadsad  <br>
                          description: asdhkjsahdkjhkjskadh  <br><br>
                         </p>
                 </section>
                 
-                  <section>
+                  <section id="contectus">
                       <h1>contect us</h1>
-                      <p>name:</p><input type="name" id="name" name="name"><br><br>
-                    <p>email</p><input type="email" id="email" name="email"><br><br>
-                    <p>message</p><input type="message" id="message" name="message"><br><br>
-                    <button class="button button1">submit</button>
+                      <div><p>name:</p><input type="name" id="name" name="name"></div>
+                      <div><p>email:</p><input type="email" id="email" name="email"></div>
+                      <div><p>message:</p><input type="message" id="message" name="message"><br></div>
+                      <div><button class="button button1">submit</button></div>
                 </section>
             </main>
             <footer>
