--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
     <header>
@@ -15,7 +15,7 @@
 
     </header>
     <main>
-        <h1>TO DO list</h1>
+        <h1 class="title1">TO DO list</h1>
         <table style="width:100%">
             <tr>
                 <td>tasks</td>
@@ -24,19 +24,19 @@
             </tr>
             <tr>
                 <th>tasks1</th>
-                <th>status1</th>
+                <th class="status">status1</th>
             </tr>
             <tr>
                 <th>tasks2</th>
-                <th>status2</th>
+                <th class="status">status2</th>
             </tr>
             <tr>
                 <th>tasks3</th>
-                <th>status3</th>
+                <th class="status">status3</th>
             </tr>
             <tr>
                 <th>tasks4</th>
-                <th>status4</th>
+                <th class="status">status4</th>
             </tr>
         </table>
           
