--- a/html/index.html
+++ b/html/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="/style/style.css">
+    
 </head>
 <body>
     <header>
@@ -45,6 +46,7 @@
         <p>contect us:<br>
             email      facbook   twitter</p>
     </footer>
+    <script src="/js/app.js"></script>
     
 </body>
 </html>
